@@ -175,65 +175,6 @@
                 </dependencies>
             </plugin>
             <plugin>
-                <groupId>org.apache.tomee.maven</groupId>
-                <artifactId>tomee-embedded-maven-plugin</artifactId>
-                <version>7.0.4</version>
-                <configuration>
-                    <tomeeversion>7.0.4</tomeeversion>
-                    <tomeeclassifier>plume</tomeeclassifier>
-                    <tomeeHost>localhost</tomeeHost>
-                    <tomeeHttpPort>8080</tomeeHttpPort>
-                    <path>/Deploy</path>
-                    <debug>false</debug>
-                    <debugPort>5005</debugPort>
-                    <config>${project.basedir}/src/test/tomee/conf</config>
-                    <webapps>
-                        <webapp>com.Dotson:Dotson:1.0-SNAPSHOT?name=Dotson</webapp>
-                    </webapps>
-                    <systemProperties>
-                        <systemVariables>
-                            <openejb.system.apps>true</openejb.system.apps>
-                            <tomee.serialization.class.blacklist>-</tomee.serialization.class.blacklist>
-                        </systemVariables>
-                    </systemProperties>
-                    <synchronization>
-                        <extensions>
-                            <!-- To update each time app built with mvn compile -->
-                            <extension>.class</extension>
-                            <extension>.properties</extension>
-                            <extension>.css</extension>
-                        </extensions>
-                        <updateInterval>2</updateInterval>
-                    </synchronization>
-                    <!-- For some reason, must to be false or reloading does not work! -->
-                    <!-- <reloadOnUpdate>false</reloadOnUpdate> -->
-                    <warFile>
-                        ${project.build.directory}/${project.build.finalName}
-                        <!--${project.build.directory}-->
-                        <!--C:\projects\Contacts\target\this should not work-->
-                    </warFile>
-                    <!-- path used by tomEE in the tomee:deploy and tomee:undeploy goals -->
-                    <path>
-                        ${project.build.directory}/apache-tomee/webapps/${project.build.finalName}
-                        <!--${project.build.directory}/${project.build.finalName}-->
-                    </path>
-                    <args>
-                        -Dfile.encoding=UTF-8 -server
-                        -Xms128m -Xmx4096m -XX:PermSize=196m -XX:MaxPermSize=128m
-                        -XX:+DisableExplicitGC</args>
-                    <libs>
-                    </libs>
-                </configuration>
-                <dependencies>
-                    <dependency>
-                        <groupId>org.apache.tomee</groupId>
-                        <artifactId>tomee-embedded</artifactId>
-                        <version>7.0.4</version>
-                        <scope>runtime</scope>
-                    </dependency>
-                </dependencies>
-            </plugin>
-            <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-deploy-plugin</artifactId>
                 <version>2.8.2</version>
